--- a/democlient/index.css
+++ b/democlient/index.css
@@ -209,6 +209,7 @@ button[disabled] {
 
 .setup-dialog::backdrop {
     background: rgba(2, 10, 14, 0.63);
+    -webkit-backdrop-filter: blur(2px);
     backdrop-filter: blur(2px);
 }
 
